# FidgetSense-SampleCollector

./: .gitignore  Cargo.toml
src/: main.rs
test/: readings.csv
test/1/: labels.csv  readings.csv
test/2/: chars.txt  labels.csv  readings.csv
test/3/: chars.txt  labels.csv  readings.csv
test/4/: chars.txt  labels.csv  readings.csv
test/5/: chars.txt  labels.csv  readings.csv
test/6/: chars.txt  labels.csv
test/8/: chars.txt  labels.csv
test/9/: chars.txt  labels.csv  readings.csv
